<resources>
    <string name="app_name">FoodCal</string>
    <string name="login_title">FoodCal</string>
    <string name="imgLogo_desc">Corporate logo</string>
    <string name="txtEmail_hint">Email</string>
    <string name="btnLogin_text">Login</string>
    <string name="txtPassword_hint">Password</string>
    <string name="btnRegister_text">Register</string>
    <string name="register_title">Register</string>
    <string name="txtConfirmPassword_hint">Confirm Password</string>
    <string name="txtName_hint">Name</string>
    <string name="btnCancel_text">Cancel</string>
    <string name="exit">Exit</string>
    <string name="mnuCalendarTitle">Calendar</string>
    <string name="mnuWeekConfTitle">Weekly configuration</string>
    <string name="mnuFoodTitle">Foods</string>
    <string name="calendar_title">Calendar</string>
    <string name="food_title">Foods</string>
    <string name="lblEmptyFoods_text">There aren\'t foods yet</string>
    <string name="food_layout_dialog_title">Food manager</string>
    <string name="food_layout_dialog_positiveButton">Add</string>
    <string name="layout_dialog_negativeButton">Cancel</string>
    <string name="dialog_login">Name</string>
    <string name="imgPopupMenu">Image of submenu (3 points)</string>
    <string name="item_popup_mnuEdit">Edit</string>
    <string name="item_popup_mnuDelete">Delete</string>
    <string name="search">Search</string>
    <string name="mnuSearch_hint">Search by name</string>
    <string name="conf_title">Weekly configuration</string>
    <string name="lblEmptyConf_text">There aren\'t weekly configurations</string>
    <string name="config_layout_dialog_title">Weekly configuration manager</string>
    <string name="config_layout_dialog_positiveButton">Create</string>
    <string name="config_layout_dialog_negativeButton">Cancel</string>
    <string name="config_edit_layout_dialog_positiveButton">Rename</string>
    <string name="weekconf_title">Weekly conf</string>
    <string name="sunday">SUN</string>
    <string name="saturday">SAT</string>
    <string name="friday">FRI</string>
    <string name="thursday">THU</string>
    <string name="wednesday">WED</string>
    <string name="tuesday">TUE</string>
    <string name="monday">MON</string>
    <string name="save">Save</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="notSelected">0 items</string>
    <string name="about">About</string>
    <string name="about_title">About</string>
    <string name="imgGif_desc">Android robot dancing</string>
    <string name="lblAbout_text">Thanks for using my app!\n\nThis app has been developed by Ismael Raqi Picardo\nContact email: ismael98r@hotmail.com</string>
    <string name="error_pass">Password can\'t be empty</string>
    <string name="error_email">Invalid email</string>
    <string name="error_name">Name can\'t be empty</string>
    <string name="error_confirmPassword">Passwords mismatch</string>
    <string name="btn_select">Select</string>
    <string name="foodSelection_title">Select Food</string>
    <string name="imgClose_descr">Close button</string>
    <string name="lblSheet_empty">There aren\'t foods</string>
    <string name="lblEmptyCalendar_text">There aren\'t calendars</string>
    <string name="weekConfSelection_title">Select Weekly Configuration</string>
    <string name="lblEmptyWeekConf_text">There aren\'t weekly configurations</string>
    <string name="btnSecret_text">PRESS</string>
    <string name="errorFields">Check fields!</string>
    <string name="successfullyRegistered">You have successfully registered</string>
    <string name="errorCredentials">Wrong credentials</string>
    <string name="serverDown">Server is not responding</string>
    <string name="tap">Tap</string>
    <string name="times">times!</string>
    <string name="imgClear_descr">Clear button</string>
    <string name="imgPassword_desc">Show/hide password</string>
</resources>
