<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/pgbar"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clickable="true"
                android:elevation="@dimen/pgbar_elevation"
                android:focusable="true"
                android:indeterminateDrawable="@drawable/pgbar_color"
                android:padding="@dimen/pgbar_padding"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/btnRegister"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/loginToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimaryDark"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/login_title" />

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="@dimen/imgLogo_size"
                android:layout_height="@dimen/imgLogo_size"
                android:layout_margin="@dimen/main_margin"
                android:contentDescription="@string/imgLogo_desc"
                android:src="@drawable/logo_foodcal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginToolbar"
                tools:srcCompat="@tools:sample/avatars" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/main_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgLogo"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtEmail_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLength="45"
                    android:nextFocusDown="@+id/txtPassword"
                    android:nextFocusForward="@+id/txtPassword"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/form_textSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/main_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilEmail"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtPassword_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/form_textSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/main_margin"
                android:background="@color/colorPrimaryDark"
                android:text="@string/btnLogin_text"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/form_textSize"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilPassword"
                app:layout_constraintVertical_bias="0.3" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/main_margin"
                android:background="@color/colorPrimaryDark"
                android:text="@string/btnRegister_text"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/form_textSize"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

            <ImageView
                android:id="@+id/imgPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/imgPassword_desc"
                android:src="@drawable/ic_eye_black_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/tilPassword"
                app:layout_constraintEnd_toEndOf="@+id/tilPassword"
                app:layout_constraintTop_toTopOf="@+id/tilPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>