<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/calendarFragment">

    <fragment
        android:id="@+id/foodFragment"
        android:name="com.practica.ismael.foodcal.ui.food.FoodFragment"
        android:label="@string/food_title" />
    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.practica.ismael.foodcal.ui.calendar.CalendarFragment"
        android:label="@string/calendar_title"
        tools:layout="@layout/calendar_fragment">
        <action
            android:id="@+id/desCalendarToWeekConf"
            app:destination="@id/weekConfSelectionFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/desCalendarToCalendarTable"
            app:destination="@id/calendarTableFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/configurationFragment"
        android:name="com.practica.ismael.foodcal.ui.configuration.ConfigurationFragment"
        android:label="@string/conf_title"
        tools:layout="@layout/configuration_fragment" >
        <action
            android:id="@+id/desConfigurationToWeekConf"
            app:destination="@id/weekConfFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <activity
        android:id="@+id/loginActivity"
        android:name="com.practica.ismael.foodcal.ui.login_activity.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
    <fragment
        android:id="@+id/weekConfFragment"
        android:name="com.practica.ismael.foodcal.ui.weekConf.WeekConfFragment"
        tools:layout="@layout/weekconf_fragment">
        <argument
            android:name="idusuario"
            app:argType="string" />
        <argument
            android:name="idsemana"
            app:argType="integer" />
        <action
            android:id="@+id/desWeekConfToFoodSelection"
            app:destination="@id/foodSelectionFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <argument
            android:name="nombreSemana"
            app:argType="string" />
    </fragment>
    <activity
        android:id="@+id/aboutActivity"
        android:name="com.practica.ismael.foodcal.ui.about.AboutActivity"
        android:label="About"
        tools:layout="@layout/about_activity" />
    <fragment
        android:id="@+id/foodSelectionFragment"
        android:name="com.practica.ismael.foodcal.ui.foodSelection.FoodSelectionFragment"
        android:label="Select Food"
        tools:layout="@layout/food_selection_fragment" />
    <fragment
        android:id="@+id/weekConfSelectionFragment"
        android:name="com.practica.ismael.foodcal.ui.weekConfSelection.WeekConfSelectionFragment"
        android:label="Select Weekly Configuration"
        tools:layout="@layout/week_conf_selection_fragment" />
    <fragment
        android:id="@+id/calendarTableFragment"
        android:name="com.practica.ismael.foodcal.ui.calendarTable.CalendarTableFragment"
        android:label="Calendar"
        tools:layout="@layout/calendar_table_fragment" >
        <argument
            android:name="idCalendario"
            app:argType="integer" />
        <argument
            android:name="idUsuario"
            app:argType="string" />
        <argument
            android:name="nombreCalendario"
            app:argType="string" />
        <action
            android:id="@+id/desCalendarTableToFoodSelectionTable"
            app:destination="@id/foodSelectionTableFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/foodSelectionTableFragment"
        android:name="com.practica.ismael.foodcal.ui.foodSelectionTable.FoodSelectionTableFragment"
        android:label="@string/foodSelection_title"
        tools:layout="@layout/food_selection_table_fragment" >
        <argument
            android:name="date"
            app:argType="string" />
        <argument
            android:name="idCalendario"
            app:argType="integer" />
    </fragment>
</navigation>